<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/datting_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/icon_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <Button
                android:id="@+id/btnLoginFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button_facebook"
                android:drawableLeft="@drawable/com_facebook_button_login_logo"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/text_btnLoginFacebook"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button_google"
                android:drawableStart="@drawable/ic_google_icon"
                android:paddingStart="50dp"
                android:paddingEnd="70dp"
                android:text="@string/text_btnLoginGoogle"
                android:textAllCaps="false"
                android:textColor="@color/com_facebook_button_send_background_color"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="20dp"
                android:text="@string/title"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/btnSiginUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_button_transperent"
                android:text="@string/text_btnSignUp"
                android:textAllCaps="false"
                android:textColor="@color/browser_actions_bg_grey"
                android:textSize="16dp" />


            -

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:text="@string/title2"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/text_txtSignIn"

                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>
