<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="match_parent"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_filt"
                    android:textSize="@dimen/_24sdp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/black" />
        <!--layout chung in range-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_display"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/custom_radio_group"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/text_male"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/text_female"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/text_both"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_age"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tV_min_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:padding="@dimen/_5sdp"
                        android:text="18"
                        android:textSize="@dimen/_14sdp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:text="-"
                        android:textSize="@dimen/_14sdp" />

                    <TextView

                        android:id="@+id/tV_max_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:text="30"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

            </RelativeLayout>

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/rangeBar_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:bar_color="@color/gray"
                app:bar_highlight_color="@color/colornavi"
                app:corner_radius="1"
                app:data_type="_integer"
                app:gap="4"
                app:left_thumb_color="@color/colornavi"
                app:right_thumb_color="@color/colornavi" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_distance"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tV_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:padding="@dimen/_5sdp"
                    android:text="50km"
                    android:textSize="@dimen/_14sdp" />


            </RelativeLayout>

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/rangeBar_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:bar_color="@color/gray"
                app:bar_highlight_color="@color/colornavi"
                app:corner_radius="1"
                app:gap="2"
                app:left_thumb_color="@color/colornavi"
                app:right_thumb_color="@color/colornavi" />
        </LinearLayout>
    </LinearLayout>
</layout>

