<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">


        <!-- layout info chung ban than-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_underline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray" />


            <TextView
                android:id="@+id/tV_mybody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/title_mybody"
                android:textSize="@dimen/_24sdp" />
            <!--layout chung dau-->
        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:alignContent="center"
            app:alignItems="center"
            app:flexWrap="wrap">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_love_black"
                    android:drawablePadding="@dimen/_3sdp"
                    android:padding="@dimen/_6sdp"
                    android:text="Độc thân"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_home"
                    android:drawablePadding="@dimen/_3sdp"
                    android:padding="@dimen/_6sdp"
                    android:text="Với ba mẹ"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_drink"
                    android:drawablePadding="@dimen/_3sdp"
                    android:padding="@dimen/_6sdp"
                    android:text="Rượu"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_ruler"
                    android:drawablePadding="@dimen/_3sdp"
                    android:padding="@dimen/_6sdp"
                    android:text=" 170 cm"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_language"
                    android:drawablePadding="@dimen/_3sdp"
                    android:padding="@dimen/_6sdp"
                    android:text="Tiếng Việt"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/custom_buttom_share">

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baby2"
                    android:drawablePadding="@dimen/_3sdp"
                    android:padding="@dimen/_6sdp"
                    android:text=" Một ngày nào đó"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>

        </com.google.android.flexbox.FlexboxLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/imageavt" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/gradient"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imageavt" />

                <RelativeLayout
                    android:background="@color/gradient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="5+"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_26sdp"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>


        <!-- layout info chung yeu thich-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tV_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_hobbies"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold" />
            <!--layout chung dau-->
            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:alignContent="center"
            app:alignItems="center"
            app:flexWrap="wrap">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:text="Dancer"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:text="Am nhac"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:text="Du lich"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:text="Boi loi"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:text="Doc sach"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/custom_buttom_share">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:text="Cau long"
                    android:textSize="@dimen/_15sdp"
                    app:layout_alignSelf="center" />
            </RelativeLayout>


        </com.google.android.flexbox.FlexboxLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tV_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_search"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold" />
            <!--layout chung dau-->
            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/custom_buttom_share">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_15sdp"
                        android:paddingVertical="@dimen/_6sdp"
                        android:text="Ban be"
                        android:textSize="@dimen/_15sdp"
                        app:layout_alignSelf="center" />
                </RelativeLayout>

            </com.google.android.flexbox.FlexboxLayout>

            <LinearLayout
                android:id="@+id/layouttroinoi_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/ic_exit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/icon_thoat" />

                <ImageView
                    android:id="@+id/heart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_heart" />

                <ImageView
                    android:id="@+id/heatShot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_heart_narrow" />
            </LinearLayout>

        </LinearLayout>
        <!--layout chung 2-->
    </LinearLayout>
</layout>
